--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.9",
     "raven": "^2.6.4",
+    "socket.io": "^2.3.0"
+  },
+   "devDependencies": {
     "supervisor": "^0.12.0"
   }
 }
